[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mortgage-calculator-ai-mcp"
version = "0.1.0"
description = "Calculate mortgage payments, amortization schedules, and total interest for home loans."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
mortgage_calculator_ai_mcp = "mortgage_calculator_ai_mcp.server:main"
